<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/buttonHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"/>

            <Button
                android:id="@+id/buttonCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/counter"/>

            <Button
                android:id="@+id/buttonProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress"/>

            <Button
                android:id="@+id/buttonAnim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anim"/>

            <Button
                android:id="@+id/buttonUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/users"/>

            <Button
                android:id="@+id/buttonPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photos"/>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>

